# lua_study

./: CMakeLists.txt  README.md
c_talk_lua/: CMakeLists.txt  VMLJ.cpp  listen_to_c.lua  talk_hello.cpp  test_hello.lib
lua/: lua53.lib  luaconf.h
lua_c/: CMakeLists.txt  addlib.cpp  lua_c.cpp  lua_c.md
lua_talk_c/: CMakeLists.txt  PrintHello.lua  lua_talk_c.md  talk_hello.cpp
sample/: CMakeLists.txt  HelloLua.cpp
